Test/bad/data/dcon_wrong_tycon.tt
data A : Type where
  MkA : A

data B : Type -> Type where
  Ok  : A -> B A
  Bad : A -> A

